--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 #Sirve para que mi aplicacion cree o no mis tablas apartir de los objetos
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 #Nos imprime en la consola la sentencia sql que se esta ejecutando
 spring.jpa.show-sql=true
